--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "example": "examples"
   },
   "scripts": {
-    "start":"webpack-dev-server --inline --progress",
-    "build": "webpack"
+    "start": "webpack-dev-server --inline --progress",
+    "build": "webpack",
+    "test": "mocha test/**.spec.ts --require ts-node/register --watch-extensions ts --watch --recursive --inspect"
   },
   "keywords": [
     "deep-learning",
@@ -26,10 +27,13 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
+    "chai": "^4.1.2",
+    "ts-node": "^5.0.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
-    "colors": "^1.1.2"
+    "colors": "^1.1.2",
+    "typescript": "^2.8.1"
   }
 }
