--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "dependencies": {
     "colors": "^1.1.2",
+    "ml-dataset-iris": "^1.0.0",
+    "ml-pca": "^2.1.0",
     "p2": "^0.7.1",
     "typescript": "^2.8.1"
   }
