--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "start": "webpack-dev-server --inline --progress",
+    "start": "webpack-dev-server --inline --progress --port 8089",
     "build": "webpack",
     "test": "mocha test/**.spec.ts --require ts-node/register --watch-extensions ts --watch --debug=8101 --recursive --inspect"
   },
